--- a/products.html
+++ b/products.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> sample
-        demo
-        auro
-    </h1>
+    <h1> sample,demo</h1>
 </body>
 </html>
